[package]
name = "repo-stream"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A robust CAR file -> MST walker for atproto"
repository = "https://tangled.org/@microcosm.blue/repo-stream"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
futures = "0.3.31"
futures-core = "0.3.31"
ipld-core = { version = "0.4.2", features = ["serde"] }
iroh-car = "0.5.1"
log = "0.4.28"
multibase = "0.9.2"
rusqlite = "0.37.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
serde_ipld_dagcbor = "0.6.4"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["rt", "sync"] }

[dev-dependencies]
clap = { version = "4.5.48", features = ["derive"] }
criterion = { version = "0.7.0", features = ["async_tokio"] }
env_logger = "0.11.8"
multibase = "0.9.2"
tempfile = "3.23.0"
tokio = { version = "1.47.1", features = ["full"] }

[profile.profiling]
inherits = "release"
debug = true

# [profile.release]
# debug = true

[[bench]]
name = "non-huge-cars"
harness = false

[[bench]]
name = "huge-car"
harness = false
